--- a/sitemap.html
+++ b/sitemap.html
@@ -18,68 +18,68 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
-.nav-link{
-color: #000000!important;
-
+*{
+font-family: 'Kumbh Sans', sans-serif;
 }
-.yfe7a1e43d48fb8fcfd84f75d2061cede a{
-font-size:16px;
-}
-.uc417b82d73171687b5f95b02b0237184 a,.yfe7a1e43d48fb8fcfd84f75d2061cede a{
-color:#070707!important;
+.vd9c9d0ff970f84b3147d8cb1cde6a303 a,.yebe21086a32c68ec98cbc2815c896db1 a{
+color:#0d0d0d!important;
 text-decoration: underline !important;
 }
-.yfe7a1e43d48fb8fcfd84f75d2061cede p,.yfe7a1e43d48fb8fcfd84f75d2061cede span,.yfe7a1e43d48fb8fcfd84f75d2061cede label{
-font-size:16px!important;
+.navbar a{
+font-size: 18px!important;
+font-weight: bold;
+}
+.t5960ad7909690bae84fb0d0af9e7dd97{
+background-color:#ffc107!important;
+border-color:#ffc107!important;
+color:#000000!important;
 }
 footer *{
 font-size:16px !important;
 }
-.uc417b82d73171687b5f95b02b0237184 p,.uc417b82d73171687b5f95b02b0237184 a,.uc417b82d73171687b5f95b02b0237184 span,.uc417b82d73171687b5f95b02b0237184 label{
+.vd9c9d0ff970f84b3147d8cb1cde6a303 p,.vd9c9d0ff970f84b3147d8cb1cde6a303 a,.vd9c9d0ff970f84b3147d8cb1cde6a303 span,.vd9c9d0ff970f84b3147d8cb1cde6a303 label{
 font-size:16px!important;
 }
-.navbar a{
-font-size: 17.6px!important;
-font-weight: bold;
+.nav-link{
+color: #000000!important;
+
 }
-a{
-text-decoration: none!important;
+.yebe21086a32c68ec98cbc2815c896db1 p,.yebe21086a32c68ec98cbc2815c896db1 span,.yebe21086a32c68ec98cbc2815c896db1 label{
+font-size:16px!important;
 }
 footer{
-background:#070707;
+background:#030303;
 color:#ffffff;
-}
-.nav-item{
-padding-left:8.3px;
-padding-right:7.8px;
-padding-top:4.6px;
-padding-bottom:5px;
 }
 footer a{
 color:#ffffff;
 text-decoration: underline;
 }
-*{
-font-family: 'Kumbh Sans', sans-serif;
+.btn-md{
+padding: 15.2px 29.5px;
+border-radius: 0;
 }
-.b65952624936f6730e9267d68ac08c5ea{
-background-color:#ffc107!important;
-border-color:#ffc107!important;
-color:#000000!important;
+a{
+text-decoration: none!important;
 }
-ul{
-list-style: circle;
+.yebe21086a32c68ec98cbc2815c896db1 a{
+font-size:16px;
 }
-.w2436773389fb9989e52596b471575ee7:hover{
-box-shadow: 0 49.8px 49.6px -25px rgb(0 0 0 / 30%);
+.xf8af18bfd0ffc2ff5e4139c11b9cdf84:hover{
+box-shadow: 0 49.6px 50px -25px rgb(0 0 0 / 30%);
 transform: rotate(-2deg) scale(1.03);
 }
 html{
 scroll-behavior: smooth;
 }
-.btn-md{
-padding: 14.8px 29.7px;
-border-radius: 0;
+.nav-item{
+padding-left:7.6px;
+padding-right:7.7px;
+padding-top:4.7px;
+padding-bottom:5.1px;
+}
+ul{
+list-style: circle;
 }
 </style>
 </head>
@@ -87,25 +87,25 @@ border-radius: 0;
 <nav class="navbar navbar-expand-lg">
 <a class="navbar-brand" href="https://olb45.netlify.app/index.html"  ><img alt="img/logo.jpg" src="img/logo.jpg" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-<span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent">
-<ul class="d-flex navbar-nav ml-auto align-items-center"><li class="nav-item">
-<a class="nav-link x27ee42ef48846ab530d9e30e83a35281" href="https://olb45.netlify.app/index.html" >plumbing quotes</a>
+<span class="navbar-toggler-icon"></span></button><div class="navbar-collapse collapse" id="navbarSupportedContent">
+<ul class="navbar-nav ml-auto align-items-center d-flex"><li class="nav-item">
+<a class="a2d052679fe562a38575eddbc941563e5 nav-link" href="https://olb45.netlify.app/index.html" >plumbing quotes</a>
 </li>
 <li class="nav-item">
-<a class="nav-link x27ee42ef48846ab530d9e30e83a35281" href="https://olb45.netlify.app/plumbing-quotes-north-london.html" >plumbing quotes north london</a>
+<a class="a2d052679fe562a38575eddbc941563e5 nav-link" href="https://olb45.netlify.app/plumbing-quotes-north-london.html" >plumbing quotes north london</a>
 </li>
 <li class="nav-item">
-<a class="x27ee42ef48846ab530d9e30e83a35281 nav-link" href="https://olb45.netlify.app/quote-my-plumbing-job.html" >quote my plumbing job</a>
+<a class="nav-link a2d052679fe562a38575eddbc941563e5" href="https://olb45.netlify.app/quote-my-plumbing-job.html" >quote my plumbing job</a>
 </li>
 <li class="nav-item">
-<a class="nav-link x27ee42ef48846ab530d9e30e83a35281" href="https://olb45.netlify.app/quote-my-job.html" >quote my job</a>
+<a class="nav-link a2d052679fe562a38575eddbc941563e5" href="https://olb45.netlify.app/quote-my-job.html" >quote my job</a>
 </li>
-<li class="dropdown nav-item">
-<a class="dropdown-toggle nav-link x27ee42ef48846ab530d9e30e83a35281" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
-<div class="dropdown-menu-right dropdown-menu" aria-labelledby="navbarDropdown">
+<li class="nav-item dropdown">
+<a class="a2d052679fe562a38575eddbc941563e5 dropdown-toggle nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
+<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="https://olb45.netlify.app/local-plumber.html"  >local plumber</a><a class="dropdown-item" href="https://olb45.netlify.app/plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="https://olb45.netlify.app/local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="https://olb45.netlify.app/plumber-north-london.html"  >plumber north london</a></div>
 </li>
-<li class="nav-item"><a class="x27ee42ef48846ab530d9e30e83a35281 nav-link" rel=nofollow href="https://olb45.netlify.app/about-us.html">About Us</a>
+<li class="nav-item"><a class="nav-link a2d052679fe562a38575eddbc941563e5" rel=nofollow href="https://olb45.netlify.app/about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -134,22 +134,22 @@ border-radius: 0;
 </div>
 </section>
 <footer>
-<div class="pt-5 container py-4" >
+<div class="container pt-5 py-4" >
 <div class="row"><div class="col-lg-3">
 <p>MML Plumbing</p>
-<p>Company Website : <a class="x27ee42ef48846ab530d9e30e83a35281" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
-</div><div class="col-lg-3"><p><a class="x27ee42ef48846ab530d9e30e83a35281" href="https://olb45.netlify.app/sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="x27ee42ef48846ab530d9e30e83a35281" href="https://olb45.netlify.app/privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="x27ee42ef48846ab530d9e30e83a35281" href="https://olb45.netlify.app/about-us.html" rel="nofollow">About Us</a></p>
+<p>Company Website : <a class="a2d052679fe562a38575eddbc941563e5" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
+</div><div class="col-lg-3"><p><a class="a2d052679fe562a38575eddbc941563e5" href="https://olb45.netlify.app/sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="a2d052679fe562a38575eddbc941563e5" href="https://olb45.netlify.app/privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="a2d052679fe562a38575eddbc941563e5" href="https://olb45.netlify.app/about-us.html" rel="nofollow">About Us</a></p>
 <p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=https://olb45.netlify.app/.html"></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook dc7c9238208a8e82954e7c0888b54db70" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="dc7c9238208a8e82954e7c0888b54db70 pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
-<a href="https://www.instagram.com/mmlplumbingltd/" class="dc7c9238208a8e82954e7c0888b54db70 google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/mmlplumbing" class="twitter dc7c9238208a8e82954e7c0888b54db70" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook w8ce72c74b895b8a2b37c7e4e917d72ed" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="pinterest w8ce72c74b895b8a2b37c7e4e917d72ed" rel="nofollow"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.instagram.com/mmlplumbingltd/" class="google w8ce72c74b895b8a2b37c7e4e917d72ed-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/mmlplumbing" class="twitter w8ce72c74b895b8a2b37c7e4e917d72ed" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
