--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -19,68 +19,68 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
-.nav-item{
-padding-left:8.2px;
-padding-right:7.8px;
-padding-top:5px;
-padding-bottom:4.9px;
-}
-.cfd70ddb0bdef34735406b2398e2a19a3 a,.a898a042b9cf3630f9c0287b20542eee3 a{
-color:#050505!important;
-text-decoration: underline !important;
-}
-.nav-link{
-color: #000000!important;
-
-}
-.a898a042b9cf3630f9c0287b20542eee3 p,.a898a042b9cf3630f9c0287b20542eee3 span,.a898a042b9cf3630f9c0287b20542eee3 label{
-font-size:16px!important;
-}
-a{
-text-decoration: none!important;
-}
-.ee699ef644b66b40e8fde82a4fda2dd21:hover{
-box-shadow: 0 49.7px 50.5px -25px rgb(0 0 0 / 30%);
-transform: rotate(-2deg) scale(1.03);
-}
-html{
-scroll-behavior: smooth;
-}
-ul{
-list-style: circle;
-}
-*{
-font-family: 'Kumbh Sans', sans-serif;
-}
-.z4e4098c216f52130a4430465a62c2133{
-background-color:#ffc107!important;
-border-color:#ffc107!important;
-color:#000000!important;
-}
-footer{
-background:#0b0b0b;
-color:#ffffff;
-}
 footer a{
 color:#ffffff;
 text-decoration: underline;
 }
-.a898a042b9cf3630f9c0287b20542eee3 a{
-font-size:16px;
-}
 .btn-md{
-padding: 15.1px 29.9px;
+padding: 15.5px 29.7px;
 border-radius: 0;
 }
 footer *{
 font-size:16px !important;
 }
-.cfd70ddb0bdef34735406b2398e2a19a3 p,.cfd70ddb0bdef34735406b2398e2a19a3 a,.cfd70ddb0bdef34735406b2398e2a19a3 span,.cfd70ddb0bdef34735406b2398e2a19a3 label{
+a{
+text-decoration: none!important;
+}
+.xfe98eb58d525b860e2555021d038e637 p,.xfe98eb58d525b860e2555021d038e637 span,.xfe98eb58d525b860e2555021d038e637 label{
 font-size:16px!important;
 }
+.ue2e96f41bfc7fb7e25749a889ba99456{
+background-color:#ffc107!important;
+border-color:#ffc107!important;
+color:#000000!important;
+}
+.xfe98eb58d525b860e2555021d038e637 a{
+font-size:16px;
+}
 .navbar a{
-font-size: 18.3px!important;
+font-size: 18.1px!important;
 font-weight: bold;
+}
+html{
+scroll-behavior: smooth;
+}
+footer{
+background:#0f0f0f;
+color:#ffffff;
+}
+.nav-link{
+color: #000000!important;
+
+}
+.fc0f0c48114a1f3784fddef552964ad09 a,.xfe98eb58d525b860e2555021d038e637 a{
+color:#141414!important;
+text-decoration: underline !important;
+}
+.c0cb0d8bfec4e72837e5c8edaf6c98a30:hover{
+box-shadow: 0 50.1px 50.5px -25px rgb(0 0 0 / 30%);
+transform: rotate(-2deg) scale(1.03);
+}
+.fc0f0c48114a1f3784fddef552964ad09 p,.fc0f0c48114a1f3784fddef552964ad09 a,.fc0f0c48114a1f3784fddef552964ad09 span,.fc0f0c48114a1f3784fddef552964ad09 label{
+font-size:16px!important;
+}
+ul{
+list-style: circle;
+}
+.nav-item{
+padding-left:8.2px;
+padding-right:8.1px;
+padding-top:4.6px;
+padding-bottom:5.1px;
+}
+*{
+font-family: 'Kumbh Sans', sans-serif;
 }
 </style>
 </head>
@@ -90,23 +90,23 @@ font-weight: bold;
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span></button><div class="navbar-collapse collapse" id="navbarSupportedContent">
 <ul class="ml-auto align-items-center navbar-nav d-flex"><li class="nav-item">
-<a class="nav-link y7f335f0e7ec0f952f9be1250b4a20c29" href="index.html" >plumbing quotes</a>
+<a class="d3b30139b05d41ff4963ee9ee4afc0862 nav-link" href="index.html" >plumbing quotes</a>
 </li>
 <li class="nav-item">
-<a class="nav-link y7f335f0e7ec0f952f9be1250b4a20c29" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
+<a class="d3b30139b05d41ff4963ee9ee4afc0862 nav-link" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
 </li>
 <li class="nav-item">
-<a class="y7f335f0e7ec0f952f9be1250b4a20c29 nav-link" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
+<a class="d3b30139b05d41ff4963ee9ee4afc0862 nav-link" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
 </li>
 <li class="nav-item">
-<a class="y7f335f0e7ec0f952f9be1250b4a20c29 nav-link" href="quote-my-job.html" >quote my job</a>
+<a class="nav-link d3b30139b05d41ff4963ee9ee4afc0862" href="quote-my-job.html" >quote my job</a>
 </li>
-<li class="nav-item dropdown">
-<a class="nav-link y7f335f0e7ec0f952f9be1250b4a20c29 dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
+<li class="dropdown nav-item">
+<a class="nav-link dropdown-toggle d3b30139b05d41ff4963ee9ee4afc0862" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="local-plumber.html"  >local plumber</a><a class="dropdown-item" href="plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="plumber-north-london.html"  >plumber north london</a></div>
 </li>
-<li class="nav-item"><a class="nav-link y7f335f0e7ec0f952f9be1250b4a20c29" rel=nofollow href="about-us.html">About Us</a>
+<li class="nav-item"><a class="nav-link d3b30139b05d41ff4963ee9ee4afc0862" rel=nofollow href="about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -173,22 +173,22 @@ https://www.mmlplumbing.co.uk/</br>
 </p>
 </section>
 <footer>
-<div class="py-4 container pt-5" >
+<div class="container py-4 pt-5" >
 <div class="row"><div class="col-lg-3">
 <p>MML Plumbing</p>
-<p>Company Website : <a class="y7f335f0e7ec0f952f9be1250b4a20c29" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
-</div><div class="col-lg-3"><p><a class="y7f335f0e7ec0f952f9be1250b4a20c29" href="sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="y7f335f0e7ec0f952f9be1250b4a20c29" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="y7f335f0e7ec0f952f9be1250b4a20c29" href="about-us.html" rel="nofollow">About Us</a></p>
+<p>Company Website : <a class="d3b30139b05d41ff4963ee9ee4afc0862" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
+</div><div class="col-lg-3"><p><a class="d3b30139b05d41ff4963ee9ee4afc0862" href="sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="d3b30139b05d41ff4963ee9ee4afc0862" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="d3b30139b05d41ff4963ee9ee4afc0862" href="about-us.html" rel="nofollow">About Us</a></p>
 <p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=" ></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/mmlplumbing.co.uk" class="daf3973acdd375a6e580620e9619297da facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="daf3973acdd375a6e580620e9619297da pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
-<a href="https://www.instagram.com/mmlplumbingltd/" class="google daf3973acdd375a6e580620e9619297da-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/mmlplumbing" class="twitter daf3973acdd375a6e580620e9619297da" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook tdf300e7e20068ad30b1cd6d3ea0e15fe" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="tdf300e7e20068ad30b1cd6d3ea0e15fe pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.instagram.com/mmlplumbingltd/" class="tdf300e7e20068ad30b1cd6d3ea0e15fe google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/mmlplumbing" class="tdf300e7e20068ad30b1cd6d3ea0e15fe twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
