--- a/sitemap.html
+++ b/sitemap.html
@@ -18,94 +18,94 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
-*{
-font-family: 'Kumbh Sans', sans-serif;
-}
-.vd9c9d0ff970f84b3147d8cb1cde6a303 a,.yebe21086a32c68ec98cbc2815c896db1 a{
-color:#0d0d0d!important;
-text-decoration: underline !important;
-}
-.navbar a{
-font-size: 18px!important;
-font-weight: bold;
-}
-.t5960ad7909690bae84fb0d0af9e7dd97{
-background-color:#ffc107!important;
-border-color:#ffc107!important;
-color:#000000!important;
+a{
+text-decoration: none!important;
 }
 footer *{
 font-size:16px !important;
 }
-.vd9c9d0ff970f84b3147d8cb1cde6a303 p,.vd9c9d0ff970f84b3147d8cb1cde6a303 a,.vd9c9d0ff970f84b3147d8cb1cde6a303 span,.vd9c9d0ff970f84b3147d8cb1cde6a303 label{
+html{
+scroll-behavior: smooth;
+}
+.de59bb4c3844444e3211e78103e0e928d{
+background-color:#ffc107!important;
+border-color:#ffc107!important;
+color:#000000!important;
+}
+.b75c184cc6cf93a61cf684d26e1e8964a p,.b75c184cc6cf93a61cf684d26e1e8964a span,.b75c184cc6cf93a61cf684d26e1e8964a label{
 font-size:16px!important;
-}
-.nav-link{
-color: #000000!important;
-
-}
-.yebe21086a32c68ec98cbc2815c896db1 p,.yebe21086a32c68ec98cbc2815c896db1 span,.yebe21086a32c68ec98cbc2815c896db1 label{
-font-size:16px!important;
-}
-footer{
-background:#030303;
-color:#ffffff;
 }
 footer a{
 color:#ffffff;
 text-decoration: underline;
 }
-.btn-md{
-padding: 15.2px 29.5px;
-border-radius: 0;
+footer{
+background:#141414;
+color:#ffffff;
 }
-a{
-text-decoration: none!important;
+.c7cbc159d79d078a5a228ccdcda1fc36c p,.c7cbc159d79d078a5a228ccdcda1fc36c a,.c7cbc159d79d078a5a228ccdcda1fc36c span,.c7cbc159d79d078a5a228ccdcda1fc36c label{
+font-size:16px!important;
 }
-.yebe21086a32c68ec98cbc2815c896db1 a{
-font-size:16px;
-}
-.xf8af18bfd0ffc2ff5e4139c11b9cdf84:hover{
-box-shadow: 0 49.6px 50px -25px rgb(0 0 0 / 30%);
+.x82184d0c3d1cbb24af9762d08c526f60:hover{
+box-shadow: 0 49.6px 49.9px -25px rgb(0 0 0 / 30%);
 transform: rotate(-2deg) scale(1.03);
-}
-html{
-scroll-behavior: smooth;
-}
-.nav-item{
-padding-left:7.6px;
-padding-right:7.7px;
-padding-top:4.7px;
-padding-bottom:5.1px;
 }
 ul{
 list-style: circle;
 }
+.nav-item{
+padding-left:8.5px;
+padding-right:7.7px;
+padding-top:5.3px;
+padding-bottom:4.5px;
+}
+.navbar a{
+font-size: 17.7px!important;
+font-weight: bold;
+}
+.b75c184cc6cf93a61cf684d26e1e8964a a{
+font-size:16px;
+}
+.c7cbc159d79d078a5a228ccdcda1fc36c a,.b75c184cc6cf93a61cf684d26e1e8964a a{
+color:#040404!important;
+text-decoration: underline !important;
+}
+.btn-md{
+padding: 15.5px 30.1px;
+border-radius: 0;
+}
+*{
+font-family: 'Kumbh Sans', sans-serif;
+}
+.nav-link{
+color: #000000!important;
+
+}
 </style>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar-expand-lg navbar">
 <a class="navbar-brand" href="https://olb45.netlify.app/index.html"  ><img alt="img/logo.jpg" src="img/logo.jpg" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-<span class="navbar-toggler-icon"></span></button><div class="navbar-collapse collapse" id="navbarSupportedContent">
-<ul class="navbar-nav ml-auto align-items-center d-flex"><li class="nav-item">
-<a class="a2d052679fe562a38575eddbc941563e5 nav-link" href="https://olb45.netlify.app/index.html" >plumbing quotes</a>
+<span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent">
+<ul class="d-flex align-items-center navbar-nav ml-auto"><li class="nav-item">
+<a class="nav-link x81b94a4bda95addc25c56fbaec048565" href="https://olb45.netlify.app/index.html" >plumbing quotes</a>
 </li>
 <li class="nav-item">
-<a class="a2d052679fe562a38575eddbc941563e5 nav-link" href="https://olb45.netlify.app/plumbing-quotes-north-london.html" >plumbing quotes north london</a>
+<a class="nav-link x81b94a4bda95addc25c56fbaec048565" href="https://olb45.netlify.app/plumbing-quotes-north-london.html" >plumbing quotes north london</a>
 </li>
 <li class="nav-item">
-<a class="nav-link a2d052679fe562a38575eddbc941563e5" href="https://olb45.netlify.app/quote-my-plumbing-job.html" >quote my plumbing job</a>
+<a class="x81b94a4bda95addc25c56fbaec048565 nav-link" href="https://olb45.netlify.app/quote-my-plumbing-job.html" >quote my plumbing job</a>
 </li>
 <li class="nav-item">
-<a class="nav-link a2d052679fe562a38575eddbc941563e5" href="https://olb45.netlify.app/quote-my-job.html" >quote my job</a>
+<a class="x81b94a4bda95addc25c56fbaec048565 nav-link" href="https://olb45.netlify.app/quote-my-job.html" >quote my job</a>
 </li>
 <li class="nav-item dropdown">
-<a class="a2d052679fe562a38575eddbc941563e5 dropdown-toggle nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
+<a class="x81b94a4bda95addc25c56fbaec048565 nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="https://olb45.netlify.app/local-plumber.html"  >local plumber</a><a class="dropdown-item" href="https://olb45.netlify.app/plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="https://olb45.netlify.app/local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="https://olb45.netlify.app/plumber-north-london.html"  >plumber north london</a></div>
 </li>
-<li class="nav-item"><a class="nav-link a2d052679fe562a38575eddbc941563e5" rel=nofollow href="https://olb45.netlify.app/about-us.html">About Us</a>
+<li class="nav-item"><a class="x81b94a4bda95addc25c56fbaec048565 nav-link" rel=nofollow href="https://olb45.netlify.app/about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -137,19 +137,19 @@ list-style: circle;
 <div class="container pt-5 py-4" >
 <div class="row"><div class="col-lg-3">
 <p>MML Plumbing</p>
-<p>Company Website : <a class="a2d052679fe562a38575eddbc941563e5" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
-</div><div class="col-lg-3"><p><a class="a2d052679fe562a38575eddbc941563e5" href="https://olb45.netlify.app/sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="a2d052679fe562a38575eddbc941563e5" href="https://olb45.netlify.app/privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="a2d052679fe562a38575eddbc941563e5" href="https://olb45.netlify.app/about-us.html" rel="nofollow">About Us</a></p>
+<p>Company Website : <a class="x81b94a4bda95addc25c56fbaec048565" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
+</div><div class="col-lg-3"><p><a class="x81b94a4bda95addc25c56fbaec048565" href="https://olb45.netlify.app/sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="x81b94a4bda95addc25c56fbaec048565" href="https://olb45.netlify.app/privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="x81b94a4bda95addc25c56fbaec048565" href="https://olb45.netlify.app/about-us.html" rel="nofollow">About Us</a></p>
 <p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=https://olb45.netlify.app/.html"></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook w8ce72c74b895b8a2b37c7e4e917d72ed" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="pinterest w8ce72c74b895b8a2b37c7e4e917d72ed" rel="nofollow"><i class="fa fa-linkedin"></i></a>
-<a href="https://www.instagram.com/mmlplumbingltd/" class="google w8ce72c74b895b8a2b37c7e4e917d72ed-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/mmlplumbing" class="twitter w8ce72c74b895b8a2b37c7e4e917d72ed" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/mmlplumbing.co.uk" class="e774b5fe21020d143addef0c5c566ca43 facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="pinterest e774b5fe21020d143addef0c5c566ca43" rel="nofollow"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.instagram.com/mmlplumbingltd/" class="e774b5fe21020d143addef0c5c566ca43 google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/mmlplumbing" class="e774b5fe21020d143addef0c5c566ca43 twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
