--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -19,30 +19,19 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
+.x9cbad8a9f7e49111bc5f374e08bad07f a{
+font-size:16px;
+}
+.x9cbad8a9f7e49111bc5f374e08bad07f p,.x9cbad8a9f7e49111bc5f374e08bad07f span,.x9cbad8a9f7e49111bc5f374e08bad07f label{
+font-size:16px!important;
+}
 footer a{
 color:#ffffff;
 text-decoration: underline;
 }
-.btn-md{
-padding: 15.5px 29.7px;
-border-radius: 0;
-}
-footer *{
-font-size:16px !important;
-}
-a{
-text-decoration: none!important;
-}
-.xfe98eb58d525b860e2555021d038e637 p,.xfe98eb58d525b860e2555021d038e637 span,.xfe98eb58d525b860e2555021d038e637 label{
-font-size:16px!important;
-}
-.ue2e96f41bfc7fb7e25749a889ba99456{
-background-color:#ffc107!important;
-border-color:#ffc107!important;
-color:#000000!important;
-}
-.xfe98eb58d525b860e2555021d038e637 a{
-font-size:16px;
+.y85b5b4acf1bb10903bcef8ae5d09ce45:hover{
+box-shadow: 0 50.1px 49.6px -25px rgb(0 0 0 / 30%);
+transform: rotate(-2deg) scale(1.03);
 }
 .navbar a{
 font-size: 18.1px!important;
@@ -51,36 +40,47 @@ font-weight: bold;
 html{
 scroll-behavior: smooth;
 }
-footer{
-background:#0f0f0f;
-color:#ffffff;
+.nav-item{
+padding-left:7.9px;
+padding-right:8px;
+padding-top:4.6px;
+padding-bottom:4.8px;
+}
+footer *{
+font-size:16px !important;
+}
+.btn-md{
+padding: 14.8px 30.2px;
+border-radius: 0;
 }
 .nav-link{
 color: #000000!important;
 
 }
-.fc0f0c48114a1f3784fddef552964ad09 a,.xfe98eb58d525b860e2555021d038e637 a{
-color:#141414!important;
+*{
+font-family: 'Kumbh Sans', sans-serif;
+}
+.a3d7d04aaa893f4d7cf766cfae277ee90 a,.x9cbad8a9f7e49111bc5f374e08bad07f a{
+color:#121212!important;
 text-decoration: underline !important;
 }
-.c0cb0d8bfec4e72837e5c8edaf6c98a30:hover{
-box-shadow: 0 50.1px 50.5px -25px rgb(0 0 0 / 30%);
-transform: rotate(-2deg) scale(1.03);
+.ee1b2b672b948e05637a2ee51bcdaea31{
+background-color:#ffc107!important;
+border-color:#ffc107!important;
+color:#000000!important;
 }
-.fc0f0c48114a1f3784fddef552964ad09 p,.fc0f0c48114a1f3784fddef552964ad09 a,.fc0f0c48114a1f3784fddef552964ad09 span,.fc0f0c48114a1f3784fddef552964ad09 label{
+footer{
+background:#050505;
+color:#ffffff;
+}
+.a3d7d04aaa893f4d7cf766cfae277ee90 p,.a3d7d04aaa893f4d7cf766cfae277ee90 a,.a3d7d04aaa893f4d7cf766cfae277ee90 span,.a3d7d04aaa893f4d7cf766cfae277ee90 label{
 font-size:16px!important;
 }
 ul{
 list-style: circle;
 }
-.nav-item{
-padding-left:8.2px;
-padding-right:8.1px;
-padding-top:4.6px;
-padding-bottom:5.1px;
-}
-*{
-font-family: 'Kumbh Sans', sans-serif;
+a{
+text-decoration: none!important;
 }
 </style>
 </head>
@@ -88,25 +88,25 @@ font-family: 'Kumbh Sans', sans-serif;
 <nav class="navbar navbar-expand-lg">
 <a class="navbar-brand" href="index.html"  ><img alt="img/logo.jpg" src="img/logo.jpg" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-<span class="navbar-toggler-icon"></span></button><div class="navbar-collapse collapse" id="navbarSupportedContent">
-<ul class="ml-auto align-items-center navbar-nav d-flex"><li class="nav-item">
-<a class="d3b30139b05d41ff4963ee9ee4afc0862 nav-link" href="index.html" >plumbing quotes</a>
+<span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent">
+<ul class="d-flex ml-auto navbar-nav align-items-center"><li class="nav-item">
+<a class="d29349229e0ca58c2b7ffdc1065450287 nav-link" href="index.html" >plumbing quotes</a>
 </li>
 <li class="nav-item">
-<a class="d3b30139b05d41ff4963ee9ee4afc0862 nav-link" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
+<a class="d29349229e0ca58c2b7ffdc1065450287 nav-link" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
 </li>
 <li class="nav-item">
-<a class="d3b30139b05d41ff4963ee9ee4afc0862 nav-link" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
+<a class="d29349229e0ca58c2b7ffdc1065450287 nav-link" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
 </li>
 <li class="nav-item">
-<a class="nav-link d3b30139b05d41ff4963ee9ee4afc0862" href="quote-my-job.html" >quote my job</a>
+<a class="d29349229e0ca58c2b7ffdc1065450287 nav-link" href="quote-my-job.html" >quote my job</a>
 </li>
 <li class="dropdown nav-item">
-<a class="nav-link dropdown-toggle d3b30139b05d41ff4963ee9ee4afc0862" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
-<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+<a class="nav-link d29349229e0ca58c2b7ffdc1065450287 dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
+<div class="dropdown-menu-right dropdown-menu" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="local-plumber.html"  >local plumber</a><a class="dropdown-item" href="plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="plumber-north-london.html"  >plumber north london</a></div>
 </li>
-<li class="nav-item"><a class="nav-link d3b30139b05d41ff4963ee9ee4afc0862" rel=nofollow href="about-us.html">About Us</a>
+<li class="nav-item"><a class="d29349229e0ca58c2b7ffdc1065450287 nav-link" rel=nofollow href="about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -173,22 +173,22 @@ https://www.mmlplumbing.co.uk/</br>
 </p>
 </section>
 <footer>
-<div class="container py-4 pt-5" >
+<div class="pt-5 py-4 container" >
 <div class="row"><div class="col-lg-3">
 <p>MML Plumbing</p>
-<p>Company Website : <a class="d3b30139b05d41ff4963ee9ee4afc0862" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
-</div><div class="col-lg-3"><p><a class="d3b30139b05d41ff4963ee9ee4afc0862" href="sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="d3b30139b05d41ff4963ee9ee4afc0862" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="d3b30139b05d41ff4963ee9ee4afc0862" href="about-us.html" rel="nofollow">About Us</a></p>
+<p>Company Website : <a class="d29349229e0ca58c2b7ffdc1065450287" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
+</div><div class="col-lg-3"><p><a class="d29349229e0ca58c2b7ffdc1065450287" href="sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="d29349229e0ca58c2b7ffdc1065450287" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="d29349229e0ca58c2b7ffdc1065450287" href="about-us.html" rel="nofollow">About Us</a></p>
 <p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=" ></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook tdf300e7e20068ad30b1cd6d3ea0e15fe" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="tdf300e7e20068ad30b1cd6d3ea0e15fe pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
-<a href="https://www.instagram.com/mmlplumbingltd/" class="tdf300e7e20068ad30b1cd6d3ea0e15fe google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/mmlplumbing" class="tdf300e7e20068ad30b1cd6d3ea0e15fe twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook e1cad9cca070ec3468938500e6c357824" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="pinterest e1cad9cca070ec3468938500e6c357824" rel="nofollow"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.instagram.com/mmlplumbingltd/" class="google e1cad9cca070ec3468938500e6c357824-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/mmlplumbing" class="e1cad9cca070ec3468938500e6c357824 twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
