--- a/sitemap.html
+++ b/sitemap.html
@@ -21,65 +21,65 @@
 a{
 text-decoration: none!important;
 }
-footer *{
-font-size:16px !important;
+footer{
+background:#131313;
+color:#ffffff;
 }
-html{
-scroll-behavior: smooth;
+.za13bc4a19994185fbcf0e515f6b84034 p,.za13bc4a19994185fbcf0e515f6b84034 span,.za13bc4a19994185fbcf0e515f6b84034 label{
+font-size:16px!important;
 }
-.de59bb4c3844444e3211e78103e0e928d{
+.e82852eaf5dd140d3e28f482c9976808a:hover{
+box-shadow: 0 50.5px 50.1px -25px rgb(0 0 0 / 30%);
+transform: rotate(-2deg) scale(1.03);
+}
+.za13bc4a19994185fbcf0e515f6b84034 a{
+font-size:16px;
+}
+.v218e74cb0b97b38789853385d20a1811{
 background-color:#ffc107!important;
 border-color:#ffc107!important;
 color:#000000!important;
 }
-.b75c184cc6cf93a61cf684d26e1e8964a p,.b75c184cc6cf93a61cf684d26e1e8964a span,.b75c184cc6cf93a61cf684d26e1e8964a label{
+.navbar a{
+font-size: 18.5px!important;
+font-weight: bold;
+}
+.z9f619eafb854514ce0a06d59f8f3f2ef a,.za13bc4a19994185fbcf0e515f6b84034 a{
+color:#141414!important;
+text-decoration: underline !important;
+}
+.nav-item{
+padding-left:8.5px;
+padding-right:7.9px;
+padding-top:5.5px;
+padding-bottom:4.7px;
+}
+*{
+font-family: 'Kumbh Sans', sans-serif;
+}
+.z9f619eafb854514ce0a06d59f8f3f2ef p,.z9f619eafb854514ce0a06d59f8f3f2ef a,.z9f619eafb854514ce0a06d59f8f3f2ef span,.z9f619eafb854514ce0a06d59f8f3f2ef label{
 font-size:16px!important;
+}
+.btn-md{
+padding: 14.9px 29.6px;
+border-radius: 0;
 }
 footer a{
 color:#ffffff;
 text-decoration: underline;
 }
-footer{
-background:#141414;
-color:#ffffff;
-}
-.c7cbc159d79d078a5a228ccdcda1fc36c p,.c7cbc159d79d078a5a228ccdcda1fc36c a,.c7cbc159d79d078a5a228ccdcda1fc36c span,.c7cbc159d79d078a5a228ccdcda1fc36c label{
-font-size:16px!important;
-}
-.x82184d0c3d1cbb24af9762d08c526f60:hover{
-box-shadow: 0 49.6px 49.9px -25px rgb(0 0 0 / 30%);
-transform: rotate(-2deg) scale(1.03);
-}
-ul{
-list-style: circle;
-}
-.nav-item{
-padding-left:8.5px;
-padding-right:7.7px;
-padding-top:5.3px;
-padding-bottom:4.5px;
-}
-.navbar a{
-font-size: 17.7px!important;
-font-weight: bold;
-}
-.b75c184cc6cf93a61cf684d26e1e8964a a{
-font-size:16px;
-}
-.c7cbc159d79d078a5a228ccdcda1fc36c a,.b75c184cc6cf93a61cf684d26e1e8964a a{
-color:#040404!important;
-text-decoration: underline !important;
-}
-.btn-md{
-padding: 15.5px 30.1px;
-border-radius: 0;
-}
-*{
-font-family: 'Kumbh Sans', sans-serif;
+footer *{
+font-size:16px !important;
 }
 .nav-link{
 color: #000000!important;
 
+}
+ul{
+list-style: circle;
+}
+html{
+scroll-behavior: smooth;
 }
 </style>
 </head>
@@ -88,24 +88,24 @@ color: #000000!important;
 <a class="navbar-brand" href="https://olb45.netlify.app/index.html"  ><img alt="img/logo.jpg" src="img/logo.jpg" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent">
-<ul class="d-flex align-items-center navbar-nav ml-auto"><li class="nav-item">
-<a class="nav-link x81b94a4bda95addc25c56fbaec048565" href="https://olb45.netlify.app/index.html" >plumbing quotes</a>
+<ul class="align-items-center d-flex navbar-nav ml-auto"><li class="nav-item">
+<a class="nav-link z11efd8b73161451666278d058336c130" href="https://olb45.netlify.app/index.html" >plumbing quotes</a>
 </li>
 <li class="nav-item">
-<a class="nav-link x81b94a4bda95addc25c56fbaec048565" href="https://olb45.netlify.app/plumbing-quotes-north-london.html" >plumbing quotes north london</a>
+<a class="nav-link z11efd8b73161451666278d058336c130" href="https://olb45.netlify.app/plumbing-quotes-north-london.html" >plumbing quotes north london</a>
 </li>
 <li class="nav-item">
-<a class="x81b94a4bda95addc25c56fbaec048565 nav-link" href="https://olb45.netlify.app/quote-my-plumbing-job.html" >quote my plumbing job</a>
+<a class="z11efd8b73161451666278d058336c130 nav-link" href="https://olb45.netlify.app/quote-my-plumbing-job.html" >quote my plumbing job</a>
 </li>
 <li class="nav-item">
-<a class="x81b94a4bda95addc25c56fbaec048565 nav-link" href="https://olb45.netlify.app/quote-my-job.html" >quote my job</a>
+<a class="nav-link z11efd8b73161451666278d058336c130" href="https://olb45.netlify.app/quote-my-job.html" >quote my job</a>
 </li>
-<li class="nav-item dropdown">
-<a class="x81b94a4bda95addc25c56fbaec048565 nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
-<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+<li class="dropdown nav-item">
+<a class="z11efd8b73161451666278d058336c130 dropdown-toggle nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
+<div class="dropdown-menu-right dropdown-menu" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="https://olb45.netlify.app/local-plumber.html"  >local plumber</a><a class="dropdown-item" href="https://olb45.netlify.app/plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="https://olb45.netlify.app/local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="https://olb45.netlify.app/plumber-north-london.html"  >plumber north london</a></div>
 </li>
-<li class="nav-item"><a class="x81b94a4bda95addc25c56fbaec048565 nav-link" rel=nofollow href="https://olb45.netlify.app/about-us.html">About Us</a>
+<li class="nav-item"><a class="z11efd8b73161451666278d058336c130 nav-link" rel=nofollow href="https://olb45.netlify.app/about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -134,22 +134,22 @@ color: #000000!important;
 </div>
 </section>
 <footer>
-<div class="container pt-5 py-4" >
+<div class="pt-5 container py-4" >
 <div class="row"><div class="col-lg-3">
 <p>MML Plumbing</p>
-<p>Company Website : <a class="x81b94a4bda95addc25c56fbaec048565" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
-</div><div class="col-lg-3"><p><a class="x81b94a4bda95addc25c56fbaec048565" href="https://olb45.netlify.app/sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="x81b94a4bda95addc25c56fbaec048565" href="https://olb45.netlify.app/privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="x81b94a4bda95addc25c56fbaec048565" href="https://olb45.netlify.app/about-us.html" rel="nofollow">About Us</a></p>
+<p>Company Website : <a class="z11efd8b73161451666278d058336c130" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
+</div><div class="col-lg-3"><p><a class="z11efd8b73161451666278d058336c130" href="https://olb45.netlify.app/sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="z11efd8b73161451666278d058336c130" href="https://olb45.netlify.app/privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="z11efd8b73161451666278d058336c130" href="https://olb45.netlify.app/about-us.html" rel="nofollow">About Us</a></p>
 <p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=https://olb45.netlify.app/.html"></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/mmlplumbing.co.uk" class="e774b5fe21020d143addef0c5c566ca43 facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="pinterest e774b5fe21020d143addef0c5c566ca43" rel="nofollow"><i class="fa fa-linkedin"></i></a>
-<a href="https://www.instagram.com/mmlplumbingltd/" class="e774b5fe21020d143addef0c5c566ca43 google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/mmlplumbing" class="e774b5fe21020d143addef0c5c566ca43 twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/mmlplumbing.co.uk" class="w327b909a5e24a3e0d7bc1f721a0a48a7 facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="w327b909a5e24a3e0d7bc1f721a0a48a7 pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.instagram.com/mmlplumbingltd/" class="w327b909a5e24a3e0d7bc1f721a0a48a7 google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/mmlplumbing" class="w327b909a5e24a3e0d7bc1f721a0a48a7 twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
